--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Template HTML CSS Bootstrap Vue</title>
+        <title>Vue To Do List</title>
 
         <!-- Fontawesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -19,12 +19,18 @@
         
         <div id="app">
             
-             <!-- Milestone 1: Lista di todo -->
+            <!--lista di todo -->
             <ul>
-                <li v-for="(todo, index) in todos" :key="index"
-                :class="{ 'completed': todo.done }"
-                >
-                    {{ todo.text }}
+                <li v-for="(todo, index) in todos" :key="index">
+
+                    <!--toggle per mettere e togliere la linea -->
+                    <span :class="{ 'completed': todo.done }"
+                    @click="toggleTodo(index)">
+                        {{ todo.text }}
+                    </span>
+
+                    <!--bottone per eliminare todo -->
+                    <button @click="removeTodo(todo.id)">x</button>
                 </li>
             </ul>
 
